--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@simplewebauthn/server": "^8.3.5",
     "axios": "^1.6.2",
     "heroicons": "^2.0.18",
     "react": "^18.2.0",
