--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,8 @@
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
