--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@simplewebauthn/server": "^8.3.5",
+    "@smile_identity/smart-camera-web": "^1.0.2",
     "axios": "^1.6.2",
     "heroicons": "^2.0.18",
     "react": "^18.2.0",
