--- a/app/package.json
+++ b/app/package.json
@@ -13,14 +13,17 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.4",
     "@simplewebauthn/server": "^8.3.5",
     "@smile_identity/smart-camera-web": "^1.0.2",
     "axios": "^1.6.2",
     "heroicons": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.20.1",
-    "use-immer": "^0.9.0"
+    "use-immer": "^0.9.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@jridgewell/sourcemap-codec": "^1.4.15",
