--- a/app/package.json
+++ b/app/package.json
@@ -31,7 +31,8 @@
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.20.1",
     "use-immer": "^0.9.0",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "@yudiel/react-qr-scanner": "^1.2.10"
   },
   "devDependencies": {
     "@jridgewell/sourcemap-codec": "^1.4.15",
