--- a/app/package.json
+++ b/app/package.json
@@ -20,8 +20,10 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.4",
+    "@ngnc/bridge": "^1.3.1",
     "@simplewebauthn/server": "^8.3.5",
     "@smile_identity/smart-camera-web": "^1.0.2",
+    "@yudiel/react-qr-scanner": "^1.2.10",
     "axios": "^1.6.2",
     "heroicons": "^2.0.18",
     "quagga": "^0.12.1",
@@ -30,8 +32,7 @@
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.20.1",
     "use-immer": "^0.9.0",
-    "yup": "^1.3.3",
-    "@yudiel/react-qr-scanner": "^1.2.10"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@jridgewell/sourcemap-codec": "^1.4.15",
