--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "@yudiel/react-qr-scanner": "^1.2.10",
     "axios": "^1.6.2",
     "heroicons": "^2.0.18",
+    "materialize-css": "^1.0.0-rc.2",
     "quagga": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
