--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1",
     "use-immer": "^0.9.0",
     "yup": "^1.3.3"
